# hands_on_airflow_on_cloud_composer

./: .gitignore  INSTRUCTIONS.md  README.md  deploy_dags.sh  pyproject.toml
dags/: airflow_monitoring.py  dag_definition.py
dags/scripts/: custom_script.py  dummy_func.py
dags/sql/: weekly_summary.sql
hands_on_airflow_on_cloud_composer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_dag_integrity.py
tests/scripts/: test_custom_script.py
